# ai-trader-dashboard

./: app.py  data.json  fetch_portfolio.py  pyproject.toml  requirements.txt
.github/workflows/: update.yml
dashboard/: app.py
dashboard/data/: latest.json
dashboard/data/snapshots/20251030T181855Z/: snapshot.json
dashboard/data/snapshots/20251030T182253Z/: snapshot.json.tmp
dashboard/update_jobs/: positions_job.py
